<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/text_edit_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:background="@color/ivory">

    <TextView
        android:id="@+id/dialog_cancel_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:text="@string/cancel_reason_text"
        android:textAlignment="center"
        android:textColor="@color/brown"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/taupe"
        android:fontFamily="@font/raleway"
        android:text="@string/exit_button"
        android:textColor="@color/ivory"
        android:textSize="17sp"
        app:cornerRadius="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_cancel_title"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/mauve"
        android:fontFamily="@font/raleway"
        android:text="@string/ok_button"
        android:textColor="@color/ivory"
        android:textSize="17sp"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_cancel_title"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>