<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivory">

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:background="@color/rose"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/avatar_circle_background"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/circle_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:contentDescription="@string/app_logo_content_description"
        app:layout_constraintEnd_toEndOf="@id/avatar_circle_background"
        app:layout_constraintStart_toStartOf="@id/avatar_circle_background"
        app:layout_constraintTop_toTopOf="@id/avatar_circle_background"
        app:layout_constraintBottom_toBottomOf="@id/avatar_circle_background"
        app:srcCompat="@drawable/glam_vibe_logo" />

    <TextView
        android:id="@+id/authorization_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/raleway"
        android:text="@string/authorization_textview"
        android:textAlignment="center"
        android:textColor="@color/brown"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_text_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundColor="@color/champagne"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authorization_textview">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_text_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/outline_person_24"
            android:drawablePadding="5dp"
            android:fontFamily="@font/lato"
            android:hint="@string/login_hint"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/password_hint"
        app:boxBackgroundColor="@color/champagne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text_edit_layout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/outline_lock_24"
            android:drawablePadding="5dp"
            android:fontFamily="@font/lato"
            android:inputType="textPassword"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/mauve"
        android:fontFamily="@font/raleway"
        android:text="@string/authorization_button"
        android:textColor="@color/ivory"
        android:textSize="17sp"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text_edit_layout"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/taupe"
        android:fontFamily="@font/raleway"
        android:text="@string/registration_button"
        android:textColor="@color/ivory"
        android:textSize="17sp"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>